# roomler2

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  HANDOVER3.md  HANDOVER4.md  HANDOVER6.md  HANDOVER7.md  HANDOVER9.md  LICENSE  README.md  docker-compose.yml  package-lock.json  streaming-options.md  stress-test-conference.mjs  stress-test-results.txt  test-conference.mjs  turnserver.conf
.claude/: daily-health-check-prompt.md  plan.md
.claude/skills/: performance-patterns.md  security-patterns.md
.github/workflows/: ci.yml  daily-health-check.yml  release-agent.yml
agents/roomler-agent/: Cargo.toml
agents/roomler-agent/packaging/linux/: README.Debian  roomler-agent.service
agents/roomler-agent/packaging/macos/: com.roomler.agent.plist  entitlements.plist  postinstall
agents/roomler-agent/packaging/windows/: README.txt
agents/roomler-agent/src/: clipboard.rs  config.rs  displays.rs  enrollment.rs  files.rs  instance_lock.rs  lib.rs  logging.rs  main.rs  notify.rs  peer.rs  post_install.rs  service.rs  signaling.rs  updater.rs  watchdog.rs
agents/roomler-agent/src/capture/: cursor.rs  mod.rs  scrap_backend.rs  wgc_backend.rs
agents/roomler-agent/src/encode/: caps.rs  color.rs  libvpx.rs  mf_backend.rs  mod.rs  openh264_backend.rs
agents/roomler-agent/src/encode/mf/: activate.rs  adapter.rs  mod.rs  sync_pipeline.rs
agents/roomler-agent/src/input/: enigo_backend.rs  mod.rs
agents/roomler-agent/wix/: main.wxs
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  main.rs  state.rs
crates/api/src/extractors/: auth.rs  tenant.rs
crates/api/src/middleware/: auth.rs
crates/api/src/routes/: admin.rs  agent_release.rs  auth.rs  background_task.rs  channel.rs  conference.rs  conference_message.rs  export.rs  file.rs  giphy.rs  integration.rs  invite.rs  message.rs  mod.rs  reaction.rs  recording.rs  remote_control.rs  room.rs  stripe.rs  tenant.rs  transcription.rs  user.rs
crates/api/src/ws/: dispatcher.rs  handler.rs  mod.rs  storage.rs
crates/config/: Cargo.toml
crates/config/src/: settings.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs  indexes.rs  lib.rs
crates/db/src/models/: audit_log.rs  background_task.rs  channel.rs  channel_member.rs  conference.rs  conference_participant.rs  custom_emoji.rs  file.rs  invite.rs  message.rs  mod.rs  notification.rs  reaction.rs  recording.rs  role.rs  tenant.rs  tenant_member.rs  transcription.rs  user.rs
crates/remote_control/src/: hub.rs  signaling.rs
crates/services/: Cargo.toml
crates/services/src/: document_recognition.rs  giphy.rs  lib.rs  stripe.rs
crates/services/src/auth/: mod.rs
crates/services/src/background/: mod.rs  task_service.rs  task_store.rs
crates/services/src/cloud_storage/: dropbox.rs  google_drive.rs  mod.rs  onedrive.rs
crates/services/src/dao/: base.rs  channel.rs  conference.rs  file.rs  message.rs  mod.rs  reaction.rs  recording.rs  room.rs  tenant.rs  transcription.rs  user.rs
crates/services/src/export/: excel.rs  mod.rs  pdf.rs
crates/services/src/media/: mod.rs  room_manager.rs  signaling.rs  worker_pool.rs
crates/tests/: Cargo.toml
crates/tests/src/: agent_tests.rs  auth_tests.rs  billing_tests.rs  channel_crud_tests.rs  channel_tests.rs  conference_message_tests.rs  conference_tests.rs  export_tests.rs  file_tests.rs  lib.rs  message_tests.rs  multi_tenancy_tests.rs  pdf_export_tests.rs  reaction_tests.rs  recording_tests.rs  remote_control_tests.rs  transcription_tests.rs
crates/tests/src/fixtures/: mod.rs  seed.rs  test_app.rs
crates/transcription/: Cargo.toml
crates/transcription/src/: config.rs  engine.rs  lib.rs  worker.rs
crates/transcription/src/asr/: local_onnx.rs  local_whisper.rs  mod.rs  remote_nim.rs
crates/transcription/src/asr/canary/: mod.rs
crates/transcription/src/pipeline/: audio_buffer.rs  mod.rs  opus_decoder.rs  resampler.rs  rtp_parser.rs
crates/transcription/src/vad/: mod.rs  silero.rs
docs/: api.md  architecture.md  data-model.md  deployment.md  real-time.md  remote-control.md  testing.md  ui.md  use-cases.md  vp9-444-plan.md
scripts/: dev-xvfb.sh
ui/: index.html  package-lock.json  package.json  playwright.config.cjs  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ui/e2e/: auth.spec.ts  billing.spec.ts  channels.spec.ts  chat.spec.ts  conference-chat.spec.ts  conference.spec.ts  dashboard.spec.ts  email-flows.spec.ts  files.spec.ts  package.json  rc-vp9-444.spec.ts  transcription.spec.ts  websocket.spec.ts
ui/e2e/fixtures/: test-helpers.ts
ui/public/: coturn_test.html  rc-vp9-444-harness.html
ui/src/: main.ts
ui/src/__tests__/composables/: useRemoteControl.spec.ts
ui/src/__tests__/stores/: agents.spec.ts
ui/src/api/: client.ts
ui/src/components/admin/: AgentsSection.vue
ui/src/components/channels/: ChannelTreeItem.vue
ui/src/components/chat/: EmojiPicker.vue  FilePanel.vue  GiphyPicker.vue  MessageBubble.vue  MessageEditor.vue
ui/src/components/common/: ConfirmDialog.vue
ui/src/components/conference/: LayoutSwitcher.vue  MiniConference.vue  TranscriptOverlay.vue  TranscriptPanel.vue  TranscriptionSwitcher.vue  VideoTile.vue
ui/src/components/layout/: AppLayout.vue
ui/src/components/rooms/: RoomTreeItem.vue
ui/src/composables/: useActiveSpeaker.ts  useAuth.ts  useConferenceLayout.ts  useMarkdown.ts  useMediasoup.ts  usePictureInPicture.ts  usePush.ts  useRemoteControl.ts  useWebSocket.ts
ui/src/locales/: en.json
ui/src/plugins/: i18n.ts  router.ts  vuetify.ts
ui/src/stores/: agents.ts  auth.ts  channels.ts  conference.ts  files.ts  messages.ts  rooms.ts  tasks.ts  tenant.ts  ws.ts
ui/src/views/: LandingView.vue
ui/src/views/admin/: AdminPanel.vue
ui/src/views/auth/: LoginView.vue  RegisterView.vue
ui/src/views/billing/: BillingView.vue
ui/src/views/channels/: ChannelList.vue  ExploreView.vue
ui/src/views/chat/: ChatView.vue
ui/src/views/conference/: ConferenceView.vue
ui/src/views/dashboard/: DashboardView.vue  TenantDashboard.vue
ui/src/workers/: rc-vp9-444-worker.ts  rc-webcodecs-worker.ts
(+6 files in other folders)
