[workspace]
resolver = "2"
members = [
    "crates/config",
    "crates/db",
    "crates/services",
    "crates/remote_control",

    "crates/api",
    "crates/tests",

    "agents/roomler-agent",
]
exclude = [
    # Vendored upstream (kept verbatim except the H265 payloader fix);
    # referenced via `[patch.crates-io]` below, not a workspace member.
    "crates/vendored/rtp",
]

# Patch webrtc-rs's rtp-0.12.0 dependency with our local vendored copy
# that carries the H265 payloader fix — upstream drops the current
# NAL after emitting a VPS/SPS/PPS aggregation packet, and also drops
# any NAL whose type isn't in a hardcoded list (IDR_N_LP, CRA, TRAIL_R,
# ...). Symptom in Chrome: framesAssembledFromMultiplePackets stays 0
# and the decoder PLI-storms despite packets flowing. See
# crates/vendored/rtp/src/codecs/h265/mod.rs for the patch notes.
[patch.crates-io]
rtp = { path = "crates/vendored/rtp" }

[workspace.package]
version = "0.1.49"
edition = "2024"
authors = ["Goran Jovanov <gjovanov@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
tower_governor = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MongoDB
mongodb = "3.2"
bson = { version = "2", features = ["chrono-0_4", "serde_with"] }

# Auth
jsonwebtoken = { version = "9", features = ["use_pem"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Config
config = "0.14"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "cookies"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
dashmap = "6"
parking_lot = "0.12"
bitflags = "2"

# Background tasks
tokio-cron-scheduler = "0.13"

# Export
rust_xlsxwriter = { version = "0.82", features = ["zlib"] }
genpdf = "0.2"

# File handling
tempfile = "3"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# mediasoup
mediasoup = "0.20"

# Testing
tokio-test = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Env
dotenvy = "0.15"


# Web Push
web-push = "0.10"

# Misc
rand = "0.9"
base64 = "0.22"
futures = "0.3"
async-trait = "0.1"
urlencoding = "2"
nanoid = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# Agent-specific
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
directories = "6"
toml = "0.9"
webrtc = "0.12"
# Screen capture. `scrap` is pure-X11 on Linux and avoids the libwayland-dev
# build dep that xcap / screenshots would pull in. Cross-platform: XShm on
# Linux, DXGI Desktop Duplication on Windows, CoreGraphics on macOS.
scrap = "0.5"
# Software H.264 encoder. `source` feature compiles OpenH264 from C — slow
# first build but no runtime lib needed. Alternatives (nvenc/qsv/vaapi)
# come behind other feature flags in a later phase.
openh264 = { version = "0.9", default-features = false, features = ["source"] }
# Cross-platform input injection. Default features pull x11rb which is
# pure-Rust (no libxcb system dep) so we can ship the agent binary from
# any host without X11 dev packages installed.
enigo = "0.6"

# Cross-platform text clipboard (Win32 OpenClipboard / XClipboard /
# NSPasteboard). Used by the clipboard data-channel handler on the
# agent side. No system deps required on Windows/macOS; Linux pulls
# `x11rb` which we already have from `enigo`.
arboard = { version = "3", default-features = false }
