[package]
name = "roomler-agent"
version.workspace = true
edition.workspace = true
description = "Roomler AI remote-control agent — runs on the controlled host, connects to the Roomler API."

[lib]
name = "roomler_agent"
path = "src/lib.rs"

[[bin]]
name = "roomler-agent"
path = "src/main.rs"

[dependencies]
# Shared protocol types (ClientMsg, ServerMsg, etc.)
roomler-ai-remote-control = { path = "../../crates/remote_control" }

# Async + networking
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }

# CLI + config
clap = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }

# Hashing (for machine_id derivation)
sha2 = { workspace = true }
hex = { workspace = true }

# ObjectId for session keys (mirrors the shared protocol)
bson = { workspace = true }

# Trait helpers
async-trait = { workspace = true }

# WebRTC peer
webrtc = { workspace = true }

# Random fallback for machine_id
rand = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
