[package]
name = "roomler-agent"
version.workspace = true
edition.workspace = true
description = "Roomler AI remote-control agent — runs on the controlled host, connects to the Roomler API."

[lib]
name = "roomler_agent"
path = "src/lib.rs"

[[bin]]
name = "roomler-agent"
path = "src/main.rs"

[dependencies]
# Shared protocol types (ClientMsg, ServerMsg, etc.)
roomler-ai-remote-control = { path = "../../crates/remote_control" }

# Async + networking
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }

# CLI + config
clap = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }

# Hashing (for machine_id derivation)
sha2 = { workspace = true }
hex = { workspace = true }

# ObjectId for session keys (mirrors the shared protocol)
bson = { workspace = true }

# Trait helpers
async-trait = { workspace = true }

# WebRTC peer
webrtc = { workspace = true }

# Screen capture (X11 on Linux, DXGI on Windows, CoreGraphics on macOS).
# Gated behind a feature because the transitive system deps (libxcb,
# libxcb-shm, libxcb-randr on Linux) aren't available on every dev box
# and we want `cargo check`/CI green without them. Production builds:
#   cargo build --release --features scrap-capture
scrap = { workspace = true, optional = true }

# Software H.264 encoder (OpenH264).
openh264 = { workspace = true, optional = true }

# Used by the media pump to wrap encoded NALUs in webrtc Sample.data.
bytes = "1"

# Random fallback for machine_id
rand = { workspace = true }

[features]
default = []
# Enables the scrap-backed screen capture on Linux/Windows/macOS.
scrap-capture = ["dep:scrap"]
# Enables the OpenH264 software video encoder.
openh264-encoder = ["dep:openh264"]
# Convenience: full media pipeline (capture + encode). What production
# agent binaries should build with.
media = ["scrap-capture", "openh264-encoder"]

[dev-dependencies]
tokio-test = { workspace = true }
