[package]
name = "roomler-agent"
version.workspace = true
edition.workspace = true
description = "Roomler AI remote-control agent — runs on the controlled host, connects to the Roomler API."

[lib]
name = "roomler_agent"
path = "src/lib.rs"

[[bin]]
name = "roomler-agent"
path = "src/main.rs"

[dependencies]
# Shared protocol types (ClientMsg, ServerMsg, etc.)
roomler-ai-remote-control = { path = "../../crates/remote_control" }

# Async + networking
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }

# CLI + config
clap = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }

# Hashing (for machine_id derivation)
sha2 = { workspace = true }
hex = { workspace = true }

# ObjectId for session keys (mirrors the shared protocol)
bson = { workspace = true }

# Trait helpers
async-trait = { workspace = true }

# WebRTC peer
webrtc = { workspace = true }

# Screen capture (X11 on Linux, DXGI on Windows, CoreGraphics on macOS).
# Gated behind a feature because the transitive system deps (libxcb,
# libxcb-shm, libxcb-randr on Linux) aren't available on every dev box
# and we want `cargo check`/CI green without them. Production builds:
#   cargo build --release --features scrap-capture
scrap = { workspace = true, optional = true }

# Software H.264 encoder (OpenH264).
openh264 = { workspace = true, optional = true }
# Raw OpenH264 C-API constants + structs needed for runtime bitrate
# control (the openh264 crate's `bitrate()` is builder-only; runtime
# changes require SetOption(ENCODER_OPTION_BITRATE, &SBitrateInfo)).
# Pinned to the same minor as the openh264 crate's transitive dep so
# the constants point at the same encoder ABI.
openh264-sys2 = { version = "0.9", optional = true, default-features = false }

# VP9 4:4:4 encoder via libvpx. Feature-gated `vp9-444` because the
# build pulls in C compilation of libvpx (~30 s first build) and a
# small bindgen layer. See docs/vp9-444-plan.md for why we pick VP9
# profile 1 over AV1/HEVC for screen-content 4:4:4.
vpx-encode = { version = "0.6", optional = true }
# AVX2 BGRA→I444 colour convert for the VP9 4:4:4 encoder input.
# Pure SIMD, no FFI, ships its own SSE2 fallback.
dcv-color-primitives = { version = "0.6", optional = true }

# Cross-platform input injection (mouse / keyboard).
enigo = { workspace = true, optional = true }

# Cross-platform text clipboard (Win32 / X11 / macOS). Feature-gated
# behind `clipboard` so builds without the clipboard DC handler
# (signalling-only CI images, future trimmed-down deployments) don't
# pay for the dep. Pulls x11rb on Linux which we already have from
# enigo so the transitive dep graph stays small.
arboard = { workspace = true, optional = true }

# Used by the media pump to wrap encoded NALUs in webrtc Sample.data.
bytes = "1"

# Cursor-shape encoding for the cursor data channel (1E.2). Small —
# only used in one place to b64 a 32-pixel BGRA bitmap per shape.
base64 = { workspace = true }

# Random fallback for machine_id
rand = { workspace = true }

# Windows Media Foundation H.264 encoder (hardware-accelerated).
# Gated behind target_os and an explicit feature; non-Windows builds
# never touch the `windows` crate. Feature list scoped to the MF, D3D11,
# DXGI, and COM interfaces the encoder actually needs — full-crate
# features blow up compile time without any benefit.
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
optional = true
features = [
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Direct3D",          # D3D_DRIVER_TYPE + D3D_FEATURE_LEVEL constants
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",       # DXGI_FORMAT etc.
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",     # GetCursorInfo / GetIconInfo for cursor capture (1E.1)
    "Win32_Graphics_Gdi",               # GetDIBits / GetObject / BITMAPINFOHEADER
    "Win32_System_LibraryLoader",        # GetModuleHandleW for viewer-indicator window registration
    # WinRT interop for the WGC capture backend (1C.1):
    # GraphicsCaptureItemInterop::CreateForMonitor(HMONITOR), plus
    # CreateDirect3D11DeviceFromDXGIDevice to wrap our D3D11 device
    # as the IDirect3DDevice that Direct3D11CaptureFramePool expects.
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
    # WinRT namespaces for the capture session, frame pool, and
    # IDirect3DSurface / IDirect3DDevice wrappers.
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Foundation",                        # EventRegistrationToken, IAsyncAction, TypedEventHandler
    "Foundation_Collections",            # IVectorView<RectInt32> for DirtyRegions
    # Multi-monitor enumeration (MonitorFromPoint / EnumDisplayMonitors).
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",                    # GetDpiForMonitor (future: scale-aware reporting)
]

[features]
default = []
# Enables the scrap-backed screen capture on Linux/Windows/macOS.
scrap-capture = ["dep:scrap"]
# Enables the OpenH264 software video encoder.
openh264-encoder = ["dep:openh264", "dep:openh264-sys2"]
# Enables the Windows Media Foundation hardware H.264 encoder. Windows-
# only by construction (the `windows` crate has no non-Windows target).
# If selected on other platforms, code remains dormant — open_default
# cascade falls through to openh264.
mf-encoder = ["dep:windows"]
# Enables the Windows.Graphics.Capture (WGC) screen-capture backend.
# Preferred on Windows 10 1803+ because it captures the HW mouse
# cursor overlay (DXGI Desktop Duplication does not), emits a
# per-frame DirtyRegion on Win 11 22000+, and plays nicely with
# multi-monitor + HDR. Falls back to scrap (DXGI) on enumeration or
# runtime failure. Pulls in the same `windows` crate feature set as
# `mf-encoder`.
wgc-capture = ["dep:windows"]
# Enables the libvpx VP9 4:4:4 software encoder for the
# DataChannel-bypass video transport (docs/vp9-444-plan.md). Pulls
# in a C build of libvpx and the dcv_color_primitives SIMD colour
# converter. ~30 s extra cold build, ~10 s incremental.
vp9-444 = ["dep:vpx-encode", "dep:dcv-color-primitives"]
# Enables the enigo-based input injection backend.
enigo-input = ["dep:enigo"]
# Enables the clipboard data-channel handler — round-trip text
# between browser and agent via the `clipboard` DC. Cross-platform
# via arboard (Win32 / XClipboard / NSPasteboard). No system deps
# on Windows; Linux pulls x11rb which we already use for enigo.
clipboard = ["dep:arboard"]
# Enables the Windows viewer-indicator overlay — topmost layered
# click-through window drawn on the controlled host to signal "someone
# is watching". Excluded from screen capture via SetWindowDisplayAffinity
# so it never makes it into the RTP stream. No-op on non-Windows.
viewer-indicator = ["dep:windows"]
# Convenience: full media pipeline (capture + software encode).
media = ["scrap-capture", "openh264-encoder"]
# Full media pipeline including the MF hardware encoder. Production
# Windows builds should use this so the open_default cascade can pick
# MF when available and fall back to openh264 when not.
media-hw = ["media", "mf-encoder"]
# Everything needed for a full remote-control session, software only.
full = ["media", "enigo-input", "clipboard"]
# Everything needed including the MF hardware encoder. Production
# Windows MSI builds with this.
full-hw = ["full", "mf-encoder", "wgc-capture", "viewer-indicator"]

[dev-dependencies]
tokio-test = { workspace = true }

# ---------------------------------------------------------------------------
# Packaging metadata
# ---------------------------------------------------------------------------

# cargo-deb (Linux .deb)
#   cargo deb -p roomler-agent --no-build
# Produces target/debian/roomler-agent_<version>_amd64.deb
[package.metadata.deb]
maintainer = "Goran Jovanov <gjovanov@gmail.com>"
copyright = "2026, Goran Jovanov <gjovanov@gmail.com>"
license-file = ["../../LICENSE", "0"]
extended-description = """\
Native remote-control agent for the Roomler AI platform. Runs on the \
controlled host, maintains an outbound WebSocket connection to the \
Roomler API for signalling, and serves a WebRTC peer directly to the \
browser controller (video + input over P2P — the server never sees \
raw pixels or keystrokes)."""
depends = "libc6, libxcb1, libxcb-shm0, libxcb-randr0"
section = "net"
priority = "optional"
assets = [
    ["target/release/roomler-agent", "usr/bin/", "755"],
    ["packaging/linux/roomler-agent.service", "usr/lib/systemd/user/roomler-agent.service", "644"],
    ["packaging/linux/README.Debian", "usr/share/doc/roomler-agent/README.Debian", "644"],
]

# cargo-wix (Windows .msi)
#   cargo wix -p roomler-agent --nocapture
# Produces target/wix/roomler-agent-<version>-x86_64.msi
# Source lives at agents/roomler-agent/wix/main.wxs.
[package.metadata.wix]
upgrade-guid = "1F2D7B1C-8B2F-4D2E-B1A3-6B1E2C7E4D91"
path-guid    = "3A8C9F21-4E7D-4A8E-9F3B-8D1C2E7F5A62"
license      = false
eula         = false
