[package]
name = "roomler2-api"
version.workspace = true
edition.workspace = true

[lib]
name = "roomler2_api"
path = "src/lib.rs"

[[bin]]
name = "roomler2-api"
path = "src/main.rs"

[dependencies]
roomler2-config = { path = "../config" }
roomler2-db = { path = "../db" }
roomler2-services = { path = "../services" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
mongodb.workspace = true
bson.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
jsonwebtoken.workspace = true
dashmap.workspace = true
redis.workspace = true
futures.workspace = true
validator.workspace = true
tempfile.workspace = true
mediasoup.workspace = true
