[package]
name = "roomler-ai-tests"
version.workspace = true
edition.workspace = true

[lib]
name = "roomler_ai_tests"
path = "src/lib.rs"

[dependencies]
roomler-ai-config = { path = "../config" }
roomler-ai-db = { path = "../db" }
roomler-ai-services = { path = "../services" }
roomler-ai-api = { path = "../api" }
roomler-agent = { path = "../../agents/roomler-agent" }
webrtc.workspace = true
tokio.workspace = true
mongodb.workspace = true
bson.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tokio-tungstenite = "0.26"
futures.workspace = true
