[package]
name = "roomler2-transcription"
version.workspace = true
edition.workspace = true

[features]
default = ["vad"]
vad = ["dep:ort", "dep:ndarray"]
local-whisper = ["dep:whisper-rs"]
local-onnx = ["dep:ort", "dep:ndarray"]
remote-nim = ["dep:tonic", "dep:prost"]

[dependencies]
# Audio pipeline (always-on)
audiopus.workspace = true
rubato.workspace = true
audioadapter-buffers = "2"

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# IDs
bson = { workspace = true }

# Chrono
chrono = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# VAD + ONNX (optional)
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"], optional = true }
ndarray = { version = "0.17", optional = true }

# FFT for mel spectrogram (used by Canary ONNX backend)
rustfft = "6.4"

# Local Whisper (optional)
whisper-rs = { version = "0.15", optional = true }

# Remote NIM gRPC (optional)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
